srcs/tester/base/map/insert/log.txt
./base/map/insert/patched.cpp:7:3: error: use of undeclared identifier 'ft'
  ft::map<char,int> mymap;
  ^
./base/map/insert/patched.cpp:10:3: error: use of undeclared identifier 'mymap'
  mymap.insert ( std::pair<char,int>('a',100) );
  ^
./base/map/insert/patched.cpp:11:3: error: use of undeclared identifier 'mymap'
  mymap.insert ( std::pair<char,int>('z',200) );
  ^
./base/map/insert/patched.cpp:13:13: error: use of undeclared identifier 'ft'
  std::pair<ft::map<char,int>::iterator,bool> ret;
            ^
./base/map/insert/patched.cpp:13:47: error: C++ requires a type specifier for all declarations
  std::pair<ft::map<char,int>::iterator,bool> ret;
                                              ^
./base/map/insert/patched.cpp:14:9: error: use of undeclared identifier 'mymap'
  ret = mymap.insert ( std::pair<char,int>('z',500) );
        ^
./base/map/insert/patched.cpp:21:3: error: use of undeclared identifier 'ft'
  ft::map<char,int>::iterator it = mymap.begin();
  ^
./base/map/insert/patched.cpp:21:36: error: use of undeclared identifier 'mymap'
  ft::map<char,int>::iterator it = mymap.begin();
                                   ^
./base/map/insert/patched.cpp:22:3: error: use of undeclared identifier 'mymap'
  mymap.insert (it, std::pair<char,int>('b',300));  // max efficiency inserting
  ^
./base/map/insert/patched.cpp:23:3: error: use of undeclared identifier 'mymap'
  mymap.insert (it, std::pair<char,int>('c',400));  // no max efficiency inserting
  ^
./base/map/insert/patched.cpp:26:3: error: use of undeclared identifier 'ft'
  ft::map<char,int> anothermap;
  ^
./base/map/insert/patched.cpp:27:3: error: use of undeclared identifier 'anothermap'
  anothermap.insert(mymap.begin(),mymap.find('c'));
  ^
./base/map/insert/patched.cpp:27:21: error: use of undeclared identifier 'mymap'
  anothermap.insert(mymap.begin(),mymap.find('c'));
                    ^
./base/map/insert/patched.cpp:27:35: error: use of undeclared identifier 'mymap'
  anothermap.insert(mymap.begin(),mymap.find('c'));
                                  ^
./base/map/insert/patched.cpp:31:11: error: use of undeclared identifier 'mymap'
  for (it=mymap.begin(); it!=mymap.end(); ++it)
          ^
./base/map/insert/patched.cpp:31:30: error: use of undeclared identifier 'mymap'
  for (it=mymap.begin(); it!=mymap.end(); ++it)
                             ^
./base/map/insert/patched.cpp:35:11: error: use of undeclared identifier 'anothermap'
  for (it=anothermap.begin(); it!=anothermap.end(); ++it)
          ^
./base/map/insert/patched.cpp:35:35: error: use of undeclared identifier 'anothermap'
  for (it=anothermap.begin(); it!=anothermap.end(); ++it)
                                  ^
18 errors generated.
